# segmentation_utils

./: README.md  pyproject.toml  scratch
configs/: cityscapes_forests.py  cityscapes_forests_derived.py  safeforest23_mmsegv2_class.py  safeforest23_mmsegv2_config.py
dev/dataset_creation/: compute_summary_statistics.py  folder_to_cityscapes.py  merge_datasets.py  remap_classes.py  remap_folder.py  split_folder.py  viame_to_cityscapes.py
dev/post_processing/: merge_images.py
dev/visualization/: frequency_hist.py  make_colorbar.py  visualize_semantic_labels.py
mmseg_utils/: config.py
mmseg_utils/dataset_creation/: class_utils.py  dataset_utils.py  file_utils.py  folder_to_cityscapes.py  img_utils.py  mmseg_config.py  parsing.py  summary_statistics.py  viame_reader.py
mmseg_utils/entrypoints/: make_colormap.py  viame_to_cityscapes.py
mmseg_utils/inference/: folder_vis.py
mmseg_utils/model_evaluation/: README.md
mmseg_utils/utils/: files.py
mmseg_utils/visualization/: visualize_classes.py
segmentation_utils/: config.py
segmentation_utils/dataset_creation/: class_utils.py  dataset_utils.py  file_utils.py  folder_to_cityscapes.py  img_utils.py  parsing.py  split_utils.py
segmentation_utils/entrypoints/: make_colormap.py  viame_to_cityscapes.py
segmentation_utils/visualization/: visualize_classes.py
tests/: test_mmseg_utils.py
