[tool.poetry]
name = "mmseg_utils"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-image = "^0.19.3"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
ubelt = "^1.2.3"
tqdm = "^4.64.1"
black = "^23.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
